--- a/src/app/pages/home/perfil/perfil.page.html
+++ b/src/app/pages/home/perfil/perfil.page.html
@@ -1,13 +1,34 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>perfil</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
+
+
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">perfil</ion-title>
     </ion-toolbar>
   </ion-header>
+  <div>
+    <div class="contenedor_perfil">
+      <img [src]="seleccionarImagen || 'assets/perfil.jpg'" alt="Foto de perfil" class="imagen_perfil"
+        (click)="cambiarFoto()" />
+      <input type="file" hidden #fileInput (change)="imagenElegida($event)" accept="image/*" />
+      <div class="contenedorBienvenidaUsuario">
+        <div class="contenedorBienvenida">
+          <p>¡BIENVENIDO!
+        </div>
+        <div class="contenedorUsuario">
+          <p>{{usuarioLogueado.nombre}} {{usuarioLogueado.apellido}}</p>
+        </div>
+      </div>
+    </div>
+    <ion-card class="card">
+      <div class="contenedorDatos">
+        <p><strong> Nombre de usuario: </strong>{{ usuarioLogueado.nombreUsuario }} </p>
+        <p><strong>gmail registrado: </strong>{{usuarioLogueado.email}}</p>
+        <p><a href="#"><strong>Tema claro / oscuro</strong></a></p>
+        <p><a href="#"><strong>Ayuda / Soporte</strong></a></p>
+      </div>
+    </ion-card>
+
+  </div>
 </ion-content>
